Added jump links to header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
 	<section role="region">
 		<header class="title" role="banner">
-			<h1 class="top skyblue id="top">Wiki</h1>
-      <h1 class="middle lemon">YouTube</h1>
-      <h1 class="bottom electricblue">Google-Books</h1>
+			<h1 class="top skyblue id="top"><a href="#wiki-results">Wiki</a></h1>
+      <h1 class="middle lemon"><a href="#yt-results">YouTube</a></h1>
+      <h1 class="bottom electricblue"><a href="#gb-results">Google-Books</a></h1>
       <h1 class="mission steelgrey">SEARCH THE TOP RESULTS ON <span>3</span> CHANNELS AT ONCE!!!</h1>
 		</header>	
 
