added footer and tooltip

--- a/blackcodemaker.github.io-search-api/index.html
+++ b/blackcodemaker.github.io-search-api/index.html
@@ -39,12 +39,33 @@
 		<div class="box-1" id="wiki-results"></div>
 		<div class="box-2" id="yt-results"></div>
 		<div class="box-3" id="gb-results"></div>
-    <div class="background-bottom"></div>
+    	<div class="background-bottom"></div>
+
+    	<ul id="fixed_menu">
+      		<li class="tooltip">
+         		<a href="#wiki-results" class="wiki-results">•</a>
+         		<span class="tooltiptext">Wikipedia</span>
+      		</li>
+      		<li class="tooltip">
+        		<a href="#yt-results" class="yt-results">•</a>
+        		<span class="tooltiptext">YouTube</span>
+      		</li>
+      		<li class="tooltip">
+        		<a href="#gb-results" class="gb-results">•</a>
+        		<span class="tooltiptext">GoogleBooks</span>
+      		</li>
+    	</ul>
+
 
 	</section>	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 
+    <footer id="testFooter">
+  		<p>Created by: Jonathan Black</p>
+  		<p>Contact information: <a href="mailto:jblack4546@gmail.com">
+  		jblack4546@gmail.com</a>.</p>
+	</footer> 
 </body>
 </html>
