--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 	</section>	
 
   <footer id="testFooter">
-  		<p class="contact">Created by: Jonathan Black</p>
-  		<p  class="contact">Contact information: <a href="mailto:jblack4546@gmail.com">
-  		jblack4546@gmail.com</a></p>
+  		<p class="contact">2018 Jonathan Black</p>
+  		<p  class="contact">Contact Me!<a href="mailto:jblack4546@gmail.com"></a></p>
   </footer> 
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
